[[bin]]
name = "rust-interact"
path = "src/interact.rs"

[package]
name = "rust-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[dependencies.lending-pool]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.40.1"

[dependencies.multiversx-sc-scenario]
version = "0.42.0"

[dependencies.multiversx-chain-vm]
version = "0.2.1"

[dependencies.multiversx-sdk]
version = "0.1.1"

[workspace]
